# chat-room

./: .gitignore
client/: components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: App.vue  main.ts
client/src/assets/: config.js
client/src/components/: list-item.vue  msg-window.vue  portrait.vue
client/src/types/: index.ts
client/src/utils/: index.ts
server/: Cargo.toml
server/app/: index.html
server/app/assets/: index-0057a31d.js  index-179eff59.css  index-339089c9.js
server/src/: lib.rs  main.rs  server.rs
server/src/middleware/: logger.rs
