[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95" }

axum_static = "1.2.1"
chrono = "0.4.1"
colored = "2.0.0"
axum = { version = "0.6.12", features = ["ws"] }
anyhow = "1.0.70"
futures = "0.3.28"
