[package]
name = "chat-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95" }
tower-http = { version = "0.4.0", features = ["fs"] }
chrono = "0.4.1"
colored = "2.0.0"
axum = { version = "0.6.20", features = ["ws"] }
anyhow = "1.0.70"
futures = "0.3.28"
mll-axum-utils = "0.2.2"
dashmap = { version = "5.4.0", features = ["serde"] }